--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - '**'
   schedule:
-    - cron: '0 * * * *' # Executa a cada hora
+    - cron: '0 * * * *' # Ejecuta cada hora
 
 jobs:
   build:
@@ -18,10 +18,13 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.x' # Altere para a versão necessária
+          dotnet-version: '7.x' # Altere para la versión necesaria
 
       - name: Restore dependencies
         run: dotnet restore
 
       - name: Build project
         run: dotnet build --no-restore --configuration Release
+
+      - name: Simple script
+        run: echo "Este es un script simple ejecutado cada hora"
