--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           dotnet-version: '7.x' # Altere para la versión necesaria
 
-      - name: Restore dependencies
-        run: dotnet restore
+      # - name: Restore dependencies
+      #   run: dotnet restore
 
       - name: Build project
         run: dotnet build --no-restore --configuration Release
